k8s/networking/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: ${NAMESPACE}
spec:
  tls:
    - hosts:
        - api.domain.com
      secretName: api-domain-tls
    - hosts:
        - domain.com
      secretName: default-domain-tls
  rules:
    - host: api.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monsters-gateway-service
                port:
                  number: 5003
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: monsters-gateway-service
                port:
                  number: 5004
